--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,13 +1,14 @@
 ## Process this file with automake to produce Makefile.in
 
 INCLUDES = \
-	-DG_DISABLE_DEPRECATED -DPANGO_DISABLE_DEPRECATED \
-	-DGDK_DISABLE_DEPRECATED -DGDK_PIXBUF_DISABLE_DEPRECATED \
-	-DGTK_DISABLE_DEPRECATED \
 	-DPACKAGE_DATA_DIR=\""$(datadir)"\" \
 	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
 	-DG_LOG_DOMAIN=\"GooCanvas\" \
 	@PACKAGE_CFLAGS@
+
+#	-DG_DISABLE_DEPRECATED -DPANGO_DISABLE_DEPRECATED \
+#	-DGDK_DISABLE_DEPRECATED -DGDK_PIXBUF_DISABLE_DEPRECATED \
+#	-DGTK_DISABLE_DEPRECATED
 
 lib_LTLIBRARIES = libgoocanvas.la
 
