--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(goocanvas, 0.10)
+AC_INIT(goocanvas, 0.11)
 AC_PREREQ(2.50)
 AC_CONFIG_SRCDIR(src/goocanvas.c)
 AC_CONFIG_HEADERS(config.h)
@@ -9,10 +9,12 @@ AM_INIT_AUTOMAKE
 # Libtool versioning - only update before a public release.
 # If the code has changed at all: REVISION++.
 # If any interfaces have changed at all: CURRENT++, REVISION=0.
-# If it is backwards compatible: AGE++, else AGE=0.
+# If interfaces changed but it is backwards compatible: AGE++, else AGE=0.
+#  i.e. the library supports interfaces LT_CURRENT - LT_AGE up to LT_CURRENT.
+#  if two libraries have identical CURRENT and AGE, then newest REVISION used.
 LT_CURRENT=4
-LT_REVISION=0
 LT_AGE=1
+LT_REVISION=1
 
 LT_VERSION_INFO="$LT_CURRENT:$LT_REVISION:$LT_AGE"
 AC_SUBST(LT_VERSION_INFO)
