Fix building demos when builddir != srcdir. goocanvasenumtypes.h is
2008-12-29  Jonathon Jongsma  <jonathon@quotidian.org>

	    * demo/Makefile.am: Fix building demos when builddir != srcdir.
	    goocanvasenumtypes.h is generated in the build dir and not the src dir
	    so we must also add the build dir to the INCLUDES.


svn path=/trunk/; revision=35

--- a/demo/Makefile.am
+++ b/demo/Makefile.am
@@ -2,6 +2,7 @@
 
 INCLUDES = \
 	-I$(top_srcdir)/src \
+	-I$(top_builddir)/src \
 	@PACKAGE_CFLAGS@
 
 #	-DG_DISABLE_DEPRECATED -DPANGO_DISABLE_DEPRECATED \
