Added "x", "y", "width" and "height" properties where they do not exist
2009-01-12  Armin Burgmeier  <armin@openismus.com>

	    * src/goocanvasellipse.c:
	    * src/goocanvaspolyline.c:
	    * src/goocanvasgroup.c:
	    * src/goocanvaspath.c:
	    * src/goocanvaswidget.c:
	    * src/goocanvastext.c:
	    * src/goocanvastable.c: Added "x", "y", "width" and "height"
	    properties where they do not exist already. GooCanvasGroup clips its
	    children if they are out of the specified area, and GooCanvasText
	    clips the text. It is possible to turn off the clipping by using -1
	    for width or height, respectively, which is the default.

	    * demo/generic-position-demo.c:
	    * demo/mv-generic-position-demo.c:
	    * demo/Makefile.am: Added a demo showing how this can be used to
	    generically resize items using drag and drop.

	    (Patch from bug #555097 committed with quite a few changes by Damon)


svn path=/trunk/; revision=38

--- a/demo/Makefile.am
+++ b/demo/Makefile.am
@@ -9,7 +9,7 @@ INCLUDES = \
 #	-DGDK_DISABLE_DEPRECATED -DGDK_PIXBUF_DISABLE_DEPRECATED \
 #	-DGTK_DISABLE_DEPRECATED
 
-noinst_PROGRAMS = demo table-demo simple-demo scalability-demo units-demo widgets-demo mv-demo mv-table-demo mv-simple-demo mv-scalability-demo
+noinst_PROGRAMS = demo table-demo generic-position-demo simple-demo scalability-demo units-demo widgets-demo mv-demo mv-table-demo mv-generic-position-demo mv-simple-demo mv-scalability-demo
 
 demo_SOURCES = \
 	demo.c demo-fifteen.c demo-scalability.c demo-grabs.c \
@@ -67,6 +67,16 @@ widgets_demo_SOURCES = \
 	widgets-demo.c
 
 widgets_demo_LDADD = $(top_builddir)/src/libgoocanvas.la @PACKAGE_LIBS@ $(INTLLIBS)
+
+generic_position_demo_SOURCES = \
+	generic-position-demo.c
+
+generic_position_demo_LDADD = $(top_builddir)/src/libgoocanvas.la @PACKAGE_LIBS@ $(INTLLIBS)
+
+mv_generic_position_demo_SOURCES = \
+	mv-generic-position-demo.c
+
+mv_generic_position_demo_LDADD = $(top_builddir)/src/libgoocanvas.la @PACKAGE_LIBS@ $(INTLLIBS)
 
 EXTRA_DIST = flower.png toroid.png
 
