2009-06-29  Damon Chaplin  <damon@gnome.org>
	    * Released GooCanvas 0.15

2009-06-29  Damon Chaplin  <damon@gnome.org>

	    * src/goocanvasimage.c: added "scale-to-fit" property, which scales
	    the image to fit the "width" and "height" settings.

	    * demo/units-demo.c:
	    * demo/mv-demo.c (plant_flower):
	    * demo/demo.c (plant_flower): test "scale-to-fit" property.

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,17 @@ Makefile.in
 /src/stamp-goocanvasenumtypes.h
 /src/stamp-goocanvasmarshal.h
 /stamp-h1
+/docs/goocanvas-decl-list.txt
+/docs/goocanvas-decl.txt
+/docs/goocanvas-undeclared.txt
+/docs/goocanvas-undocumented.txt
+/docs/goocanvas-unused.txt
+/docs/goocanvas.args
+/docs/goocanvas.hierarchy
+/docs/goocanvas.interfaces
+/docs/goocanvas.prerequisites
+/docs/goocanvas.signals
+/docs/*.stamp
+/docs/html
+/docs/xml
+/docs/tmpl/goo*.sgml
