--- a/demo/Makefile.am
+++ b/demo/Makefile.am
@@ -4,6 +4,8 @@ INCLUDES = \
 	-I$(top_srcdir)/src \
 	-I$(top_builddir)/src \
 	@PACKAGE_CFLAGS@
+	
+DEMO_LIBS = $(top_builddir)/src/libgoocanvas-2.0.la @PACKAGE_LIBS@ $(INTLLIBS)
 
 #	-DG_DISABLE_DEPRECATED -DPANGO_DISABLE_DEPRECATED \
 #	-DGDK_DISABLE_DEPRECATED -DGDK_PIXBUF_DISABLE_DEPRECATED \
@@ -18,7 +20,7 @@ demo_SOURCES = \
 	demo-clipping.c demo-table.c demo-large-line.h demo-large-line.c \
 	demo-large-items.c demo-large-rect.h demo-large-rect.c
 
-demo_LDADD = $(top_builddir)/src/libgoocanvas.la @PACKAGE_LIBS@ $(INTLLIBS)
+demo_LDADD = $(DEMO_LIBS)
 
 mv_demo_SOURCES = \
 	mv-demo.c mv-demo-fifteen.c mv-demo-scalability.c mv-demo-grabs.c \
@@ -26,57 +28,57 @@ mv_demo_SOURCES = \
 	mv-demo-paths.c mv-demo-focus.c mv-demo-animation.c \
 	mv-demo-clipping.c mv-demo-table.c
 
-mv_demo_LDADD = $(top_builddir)/src/libgoocanvas.la @PACKAGE_LIBS@ $(INTLLIBS)
+mv_demo_LDADD = $(DEMO_LIBS)
 
 table_demo_SOURCES = \
 	table-demo.c
 
-table_demo_LDADD = $(top_builddir)/src/libgoocanvas.la @PACKAGE_LIBS@ $(INTLLIBS)
+table_demo_LDADD = $(DEMO_LIBS)
 
 mv_table_demo_SOURCES = \
 	mv-table-demo.c
 
-mv_table_demo_LDADD = $(top_builddir)/src/libgoocanvas.la @PACKAGE_LIBS@ $(INTLLIBS)
+mv_table_demo_LDADD = $(DEMO_LIBS)
 
 simple_demo_SOURCES = \
 	simple-demo.c
 
-simple_demo_LDADD = $(top_builddir)/src/libgoocanvas.la @PACKAGE_LIBS@ $(INTLLIBS)
+simple_demo_LDADD = $(DEMO_LIBS)
 
 mv_simple_demo_SOURCES = \
 	mv-simple-demo.c
 
-mv_simple_demo_LDADD = $(top_builddir)/src/libgoocanvas.la @PACKAGE_LIBS@ $(INTLLIBS)
+mv_simple_demo_LDADD = $(DEMO_LIBS)
 
 scalability_demo_SOURCES = \
 	scalability-demo.c
 
-scalability_demo_LDADD = $(top_builddir)/src/libgoocanvas.la @PACKAGE_LIBS@ $(INTLLIBS)
+scalability_demo_LDADD = $(top_builddir)/src/libgoocanva-2.0s.la @PACKAGE_LIBS@ $(INTLLIBS)
 
 mv_scalability_demo_SOURCES = \
 	mv-scalability-demo.c
 
-mv_scalability_demo_LDADD = $(top_builddir)/src/libgoocanvas.la @PACKAGE_LIBS@ $(INTLLIBS)
+mv_scalability_demo_LDADD = $(DEMO_LIBS)
 
 units_demo_SOURCES = \
 	units-demo.c
 
-units_demo_LDADD = $(top_builddir)/src/libgoocanvas.la @PACKAGE_LIBS@ $(INTLLIBS)
+units_demo_LDADD = $(DEMO_LIBS)
 
 widgets_demo_SOURCES = \
 	widgets-demo.c
 
-widgets_demo_LDADD = $(top_builddir)/src/libgoocanvas.la @PACKAGE_LIBS@ $(INTLLIBS)
+widgets_demo_LDADD = $(DEMO_LIBS)
 
 generic_position_demo_SOURCES = \
 	generic-position-demo.c
 
-generic_position_demo_LDADD = $(top_builddir)/src/libgoocanvas.la @PACKAGE_LIBS@ $(INTLLIBS)
+generic_position_demo_LDADD = $(DEMO_LIBS)
 
 mv_generic_position_demo_SOURCES = \
 	mv-generic-position-demo.c
 
-mv_generic_position_demo_LDADD = $(top_builddir)/src/libgoocanvas.la @PACKAGE_LIBS@ $(INTLLIBS)
+mv_generic_position_demo_LDADD = $(DEMO_LIBS)
 
 EXTRA_DIST = flower.png toroid.png
 
