--- a/Makefile.am
+++ b/Makefile.am
@@ -6,6 +6,6 @@ SUBDIRS = src demo docs po
 AUTOMAKE_OPTIONS = 1.7
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = goocanvas.pc
+pkgconfig_DATA = goocanvas-2.0.pc
 
-EXTRA_DIST = goocanvas.pc.in autogen.sh
+EXTRA_DIST = goocanvas-2.0.pc.in autogen.sh
