Update source code for GTK+ 3.
* demo/Makefile.am: Fix a typo.
* demo/demo-grabs.c (create_fixed):
* demo/mv-demo-grabs.c (create_fixed):
* src/goocanvas.c (goo_canvas_grab_focus), (goo_canvas_focus):
* src/goocanvasatk.c (goo_canvas_item_accessible_grab_focus),
(goo_canvas_item_accessible_ref_state_set):
Replace use of gtk_fixed_set_has_window() with gtk_widget_set_has_window().
Replace use of GTK_WIDGET_CAN_FOCUS() with gtk_widget_get_can_focus().
Replace use of GTK_WIDGET_TOPLEVEL() with gtk_widget_is_toplevel().

This seems to all work fine.

--- a/demo/Makefile.am
+++ b/demo/Makefile.am
@@ -53,7 +53,7 @@ mv_simple_demo_LDADD = $(DEMO_LIBS)
 scalability_demo_SOURCES = \
 	scalability-demo.c
 
-scalability_demo_LDADD = $(top_builddir)/src/libgoocanva-2.0s.la @PACKAGE_LIBS@ $(INTLLIBS)
+scalability_demo_LDADD = $(DEMO_LIBS)
 
 mv_scalability_demo_SOURCES = \
 	mv-scalability-demo.c
