--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ Makefile.in
 /demo/widgets-demo
 /depcomp
 /goocanvas.pc
+/goocanvas-2.0.pc
 /gtk-doc.make
 /install-sh
 /libtool
@@ -41,6 +42,7 @@ Makefile.in
 /missing
 /mkinstalldirs
 /po/POTFILES
+/po/Makefile.in.in
 /src/goocanvasenumtypes.c
 /src/goocanvasenumtypes.h
 /src/goocanvasmarshal.c
@@ -62,3 +64,4 @@ Makefile.in
 /docs/html
 /docs/xml
 /docs/tmpl/goo*.sgml
+/docs/tmpl/goo*.bak
