--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -75,7 +75,7 @@ content_files= $(expand_content_files)
 # e.g. INCLUDES=-I$(top_srcdir) -I$(top_builddir) $(GTK_DEBUG_FLAGS)
 # e.g. GTKDOC_LIBS=$(top_builddir)/gtk/$(gtktargetlib)
 INCLUDES=-I$(top_srcdir)/src -I$(top_builddir)/src @PACKAGE_CFLAGS@
-GTKDOC_LIBS=@PACKAGE_LIBS@ $(top_builddir)/src/libgoocanvas.la
+GTKDOC_LIBS=@PACKAGE_LIBS@ $(top_builddir)/src/libgoocanvas-2.0.la
 
 # This includes the standard gtk-doc make rules, copied by gtkdocize.
 include $(top_srcdir)/gtk-doc.make
