2010-06-28  Damon Chaplin  <damon@gnome.org>
	    * Made GooCanvasItemSimple implement the group methods, so all
	    subclasses can have child items.

	    Added "Groups" demo page to test this.

	    Removed "Scalability" demo page as it wasn't very useful and we have
	    the separate scalability test app which is a better scalability test.

--- a/demo/Makefile.am
+++ b/demo/Makefile.am
@@ -14,7 +14,7 @@ DEMO_LIBS = $(top_builddir)/src/libgoocanvas-2.0.la @PACKAGE_LIBS@ $(INTLLIBS)
 noinst_PROGRAMS = demo table-demo generic-position-demo simple-demo scalability-demo units-demo widgets-demo
 
 demo_SOURCES = \
-	demo.c demo-fifteen.c demo-scalability.c demo-grabs.c \
+	demo.c demo-fifteen.c demo-groups.c demo-grabs.c \
 	demo-arrowhead.c demo-features.c demo-events.c \
 	demo-paths.c demo-focus.c demo-item.h demo-item.c demo-animation.c \
 	demo-clipping.c demo-table.c demo-large-line.h demo-large-line.c \
