--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ Makefile.in
 /docs/goocanvas.prerequisites
 /docs/goocanvas.signals
 /docs/*.stamp
+/docs/*.bak
 /docs/html
 /docs/xml
 /docs/tmpl/goo*.sgml
