2010-06-29  Damon Chaplin  <damon@gnome.org>
	    * src/goocanvasitemsimple.c (goo_canvas_item_simple_set_property):
	    handle setting "clip-path" to NULL to reset it.

	    * src/goocanvastable.c: try to handle RTL direction better.

	    * src/goocanvasgroup.c (goo_canvas_group_paint): use the scale
	    argument rather than the canvas scale.

	    * src/goocanvas.c: added "before-initial-expose" flag which we use
	    to ignore any redraw requests before the initial expose (since we
	    know the entire canvas needs redrawing anyway). This speeds up the
	    creation of lots of items, e.g. scalability-demo.

	    * demo/Makefile.am (mv_demo_LDADD, demo_LDADD): added -lm to compile.

	    * demo/mv-scalability-demo.c:
	    * demo/scalability-demo.c: updated to compare with the new-api code.

--- a/demo/Makefile.am
+++ b/demo/Makefile.am
@@ -18,7 +18,7 @@ demo_SOURCES = \
 	demo-clipping.c demo-table.c demo-large-line.h demo-large-line.c \
 	demo-large-items.c demo-large-rect.h demo-large-rect.c
 
-demo_LDADD = $(top_builddir)/src/libgoocanvas.la @PACKAGE_LIBS@ $(INTLLIBS)
+demo_LDADD = $(top_builddir)/src/libgoocanvas.la @PACKAGE_LIBS@ $(INTLLIBS) -lm
 
 mv_demo_SOURCES = \
 	mv-demo.c mv-demo-fifteen.c mv-demo-scalability.c mv-demo-grabs.c \
@@ -26,7 +26,7 @@ mv_demo_SOURCES = \
 	mv-demo-paths.c mv-demo-focus.c mv-demo-animation.c \
 	mv-demo-clipping.c mv-demo-table.c
 
-mv_demo_LDADD = $(top_builddir)/src/libgoocanvas.la @PACKAGE_LIBS@ $(INTLLIBS)
+mv_demo_LDADD = $(top_builddir)/src/libgoocanvas.la @PACKAGE_LIBS@ $(INTLLIBS) -lm
 
 table_demo_SOURCES = \
 	table-demo.c
