Build GObject Introspection files.
This is a hard build-time dependency on GI, which may or may not be desired...

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,6 +5,8 @@ SUBDIRS = src demo docs po
 # require automake 1.7
 AUTOMAKE_OPTIONS = 1.7
 
+DISTCHECK_CONFIGURE_FLAGS = --enable-introspection
+
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = goocanvas-2.0.pc
 
