Introspection: be explicit with introspection prefixes

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -155,7 +155,7 @@ if HAVE_INTROSPECTION
 introspection_sources = $(libgoocanvas_2_0_la_SOURCES) $(libgoocanvas_public_headers)
 
 GooCanvas-2.0.gir: libgoocanvas-2.0.la
-GooCanvas_2_0_gir_SCANNERFLAGS = --identifier-prefix=Goo --warn-all
+GooCanvas_2_0_gir_SCANNERFLAGS = --identifier-prefix=Goo --symbol-prefix=goo --warn-all
 GooCanvas_2_0_gir_INCLUDES = Gtk-3.0
 GooCanvas_2_0_gir_CFLAGS = $(INCLUDES)
 GooCanvas_2_0_gir_LIBS = goocanvas-2.0
