Add introspection files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,8 @@ Makefile.in
 /src/goocanvasmarshal.h
 /src/stamp-goocanvasenumtypes.h
 /src/stamp-goocanvasmarshal.h
+/src/GooCanvas-2.0.gir
+/src/GooCanvas-2.0.typelib
 /stamp-h1
 /docs/goocanvas-decl-list.txt
 /docs/goocanvas-decl.txt
