--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 *.loT
 *.la
 *.gmo
+*.orig
+*.rej
 *~
 
 Makefile
@@ -41,6 +43,7 @@ Makefile.in
 /ltmain.sh
 /missing
 /mkinstalldirs
+/py-compile
 /po/POTFILES
 /po/Makefile.in.in
 /src/goocanvasenumtypes.c
@@ -49,6 +52,8 @@ Makefile.in
 /src/goocanvasmarshal.h
 /src/stamp-goocanvasenumtypes.h
 /src/stamp-goocanvasmarshal.h
+/src/GooCanvas-2.0.gir
+/src/GooCanvas-2.0.typelib
 /stamp-h1
 /docs/goocanvas-decl-list.txt
 /docs/goocanvas-decl.txt
