--- a/configure.in
+++ b/configure.in
@@ -28,7 +28,7 @@ AM_PROG_LIBTOOL
 
 m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])
 
-PYGOBJECT_REQUIRED=2.28
+PYGOBJECT_REQUIRED=2.90.4
 
 pkg_modules="gtk+-3.0 >= 3.0.0 glib-2.0 >= 2.28.0 cairo >= 1.10.0"
 PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
@@ -87,14 +87,14 @@ AC_ARG_ENABLE([python],
               [enable_python="auto"])
 
 if test "x$enable_python" = "xauto"; then
-	PKG_CHECK_EXISTS([pygobject-2.0 >= $PYGOBJECT_REQUIRED],
+	PKG_CHECK_EXISTS([pygobject-3.0 >= $PYGOBJECT_REQUIRED],
 	                 [enable_python=yes],[enable_python=no])
 fi
 
 if test "x$enable_python" = "xyes"; then
-	PKG_CHECK_MODULES(PYTHON, [pygobject-2.0 >= $PYGOBJECT_REQUIRED])
+	PKG_CHECK_MODULES(PYTHON, [pygobject-3.0 >= $PYGOBJECT_REQUIRED])
 
-	pyoverridesdir=`$PKG_CONFIG --variable=overridesdir pygobject-2.0`
+	pyoverridesdir=`$PYTHON -c "import gi;print gi._overridesdir"`
 	AC_SUBST(pyoverridesdir)
 fi
 
