added -lm to LIBADD. Bug #671766. added -lm to LIBADD.#   (use "git reset HEAD <file>..." to unstage)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,7 +12,7 @@ INCLUDES = \
 
 lib_LTLIBRARIES = libgoocanvas-2.0.la
 
-libgoocanvas_2_0_la_LIBADD = @PACKAGE_LIBS@ $(INTLLIBS)
+libgoocanvas_2_0_la_LIBADD = @PACKAGE_LIBS@ $(INTLLIBS) -lm
 
 if PLATFORM_WIN32
 no_undefined = -no-undefined
