goocanvas override is not installed with python3
this works with python 2.7 as well

--- a/configure.in
+++ b/configure.in
@@ -94,7 +94,7 @@ fi
 if test "x$enable_python" = "xyes"; then
 	PKG_CHECK_MODULES(PYTHON, [pygobject-3.0 >= $PYGOBJECT_REQUIRED])
 
-	pyoverridesdir=`$PYTHON -c "import gi;print gi._overridesdir"`
+	pyoverridesdir=`$PYTHON -c "import gi;print (gi._overridesdir)"`
 	AC_SUBST(pyoverridesdir)
 fi
 
