--- a/configure.in
+++ b/configure.in
@@ -50,6 +50,13 @@ GLIB_MKENUMS=`$PKG_CONFIG --variable=glib_mkenums glib-2.0`
 AC_SUBST(GLIB_MKENUMS)
 
 GOBJECT_INTROSPECTION_CHECK([0.6.7])
+if test "x$found_introspection" = "xyes"; then
+   INTROSPECTION_GIRDIR=`$PKG_CONFIG --define-variable=prefix='${prefix}' --variable=girdir gobject-introspection-1.0`
+   AC_SUBST(INTROSPECTION_GIRDIR)
+
+   INTROSPECTION_TYPELIBDIR=`$PKG_CONFIG --define-variable=prefix='${prefix}' --variable=typelibdir gobject-introspection-1.0`
+   AC_SUBST(INTROSPECTION_TYPELIBDIR)
+fi
 
 AC_ARG_ENABLE(rebuilds,
               [AC_HELP_STRING([--disable-rebuilds],
