--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ Makefile.in
 .deps
 .libs
 
+/ABOUT-NLS
 /INSTALL
 /aclocal.m4
 /autom4te.cache
@@ -19,6 +20,7 @@ Makefile.in
 /config.h
 /config.h.in
 /config.log
+/config.rpath
 /config.status
 /config.sub
 /configure
@@ -46,9 +48,15 @@ Makefile.in
 /missing
 /mkinstalldirs
 /py-compile
+/po/*.header
+/po/*.sed
+/po/*.sin
 /po/POTFILES
+/po/Rules-quot
 /po/Makefile.in.in
+/po/Makevars.template
 /po/goocanvas2.pot
+/po/stamp-po
 /src/goocanvasenumtypes.c
 /src/goocanvasenumtypes.h
 /src/goocanvasmarshal.c
