Use AM_GNU_GETTEXT instead of AM_GLIB_GNU_GETTEXT. #776605

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ Makefile.in
 .deps
 .libs
 
+/ABOUT-NLS
 /INSTALL
 /aclocal.m4
 /autom4te.cache
@@ -19,6 +20,7 @@ Makefile.in
 /config.h
 /config.h.in
 /config.log
+/config.rpath
 /config.status
 /config.sub
 /configure
@@ -36,7 +38,7 @@ Makefile.in
 /demo/widgets-demo
 /depcomp
 /goocanvas.pc
-/goocanvas-2.0.pc
+/goocanvas-[23].0.pc
 /gtk-doc.make
 /gtk-doc.m4
 /compile
@@ -46,17 +48,23 @@ Makefile.in
 /missing
 /mkinstalldirs
 /py-compile
+/po/*.header
+/po/*.sed
+/po/*.sin
 /po/POTFILES
+/po/Rules-quot
 /po/Makefile.in.in
-/po/goocanvas2.pot
+/po/Makevars.template
+/po/goocanvas[23].pot
+/po/stamp-po
 /src/goocanvasenumtypes.c
 /src/goocanvasenumtypes.h
 /src/goocanvasmarshal.c
 /src/goocanvasmarshal.h
 /src/stamp-goocanvasenumtypes.h
 /src/stamp-goocanvasmarshal.h
-/src/GooCanvas-2.0.gir
-/src/GooCanvas-2.0.typelib
+/src/GooCanvas-[23].0.gir
+/src/GooCanvas-[23].0.typelib
 /stamp-h1
 /docs/goocanvas-decl-list.txt
 /docs/goocanvas-decl.txt
@@ -68,16 +76,16 @@ Makefile.in
 /docs/goocanvas.interfaces
 /docs/goocanvas.prerequisites
 /docs/goocanvas.signals
-/docs/goocanvas2-decl-list.txt
-/docs/goocanvas2-decl.txt
-/docs/goocanvas2-undeclared.txt
-/docs/goocanvas2-undocumented.txt
-/docs/goocanvas2-unused.txt
-/docs/goocanvas2.args
-/docs/goocanvas2.hierarchy
-/docs/goocanvas2.interfaces
-/docs/goocanvas2.prerequisites
-/docs/goocanvas2.signals
+/docs/goocanvas[23]-decl-list.txt
+/docs/goocanvas[23]-decl.txt
+/docs/goocanvas[23]-undeclared.txt
+/docs/goocanvas[23]-undocumented.txt
+/docs/goocanvas[23]-unused.txt
+/docs/goocanvas[23].args
+/docs/goocanvas[23].hierarchy
+/docs/goocanvas[23].interfaces
+/docs/goocanvas[23].prerequisites
+/docs/goocanvas[23].signals
 /docs/*.stamp
 /docs/*.bak
 /docs/html
